<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/seting_selector"
        android:padding="20dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/sr_btn_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/sr_login_out"
        android:textColor="@color/sr_login_out_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingTop="150dp">

        <Button
            android:id="@+id/start_audio_meeting_btn"
            style="@style/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:onClick="startAudioMeeting"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="开始音频" />

        <Button
            android:id="@+id/start_meeting_btn"
            style="@style/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:onClick="startMeeting"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/start_meeting_btn_txt" />


        <Button
            android:id="@+id/join_meeting_btn"
            style="@style/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:onClick="joinMeeting"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/join_meeting_btn_txt" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:text=""
        android:textColor="@color/sr_black"
        android:textSize="12sp" />
</RelativeLayout>