<org.suirui.huijian.box.util.KeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hj_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sr_white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/hj_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sr_white"
            android:orientation="vertical">

            <include
                android:id="@+id/hj_title_layout"
                layout="@layout/hj_title_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/hj_default_set_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:src="@drawable/login_auto_unselcet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sr_default_setting"
                        android:textColor="@color/sr_black"
                        android:textSize="@dimen/sr_login_txt_16sp_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />

                <TextView
                    android:id="@+id/sr_btn_default_http"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />

                <TextView
                    android:id="@+id/sr_btn_default_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/hj_private_set_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:src="@drawable/login_auto_unselcet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sr_private_setting"
                        android:textColor="@color/sr_black"
                        android:textSize="@dimen/sr_login_txt_16sp_size" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sr_btn_private_http"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sr_http" />


                    <ImageView
                        android:id="@+id/sr_private_http"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:src="@drawable/login_auto_unselcet" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sr_btn_private_https"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sr_https" />

                    <ImageView
                        android:id="@+id/sr_private_https"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:src="@drawable/login_auto_unselcet" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />

                <EditText
                    android:id="@+id/sr_request_addr"
                    style="@style/sr_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/sr_input_addr"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="40"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/person_line" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</org.suirui.huijian.box.util.KeyboardLayout>